Sat Nov  5 22:09:48 2016  Kazuki Tsujimoto  <kazuki@callcc.net>

	* eval.c, method.h, proc.c, vm.c, vm_eval.c, vm_insnhelper.c, vm_method.c:
	  TracePoint#method_id should return method_id, not callee_id.
	  [ruby-core:77241] [Feature #12747]

	* test/ruby/test_settracefunc.rb: change accordingly.

Sat Nov  5 18:49:37 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_round, int_round): support round-to-nearest-even
	  semantics of IEEE 754 to match sprintf behavior, and add `half:`
	  optional keyword argument for the old behavior.
	  [ruby-core:76273] [Bug #12548]

Sat Nov  5 18:17:54 2016  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#compare_by_identity, Set#compare_by_identity?):
	  New methods. [Feature #12210]

Sat Nov  5 18:17:08 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rdoc/*, test/rdoc/*: Update rdoc-5.0.0
	  Release note: https://github.com/rdoc/rdoc/blob/b825775647f62c5b525e9780a28ff2fbb1d5bf6f/History.rdoc#500--2016-11-05

Sat Nov  5 17:29:06 2016  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::DNS#extract_resources): Use each_resource
	  instead of each_answer.
	  [ruby-core:75461] [Bug#12372] reported by Rafael Fernandez Lopez.

Sat Nov  5 17:18:24 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/-test-/file/fs.c (get_atime_p): Updating of file access times
	  is enabled or not.

Sat Nov  5 16:28:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (extract_getline_opts): extract chomp option.
	  [Feature #12553]

Sat Nov  5 15:58:24 2016  Sho Hashimoto  <sho-h@netlab.jp>

	* tool/mkconfig.rb: [DOC] add rbconfig documentation.

Sat Nov  5 15:42:52 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/smtp.rb (tlsconnect): support timeout for TLS handshake.
	  [ruby-core:76893] [Bug #12678]

	* lib/net/protocol.rb (ssl_socket_connect): new method to implement
	  timeout for TLS handshake.

	* lib/net/http.rb (connect): use Net::Protocol#ssl_socket_connect.
